--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -38,4 +41,14 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'androidx.recyclerview:recyclerview:1.2.1' // recyclerview implementations
+
+    implementation 'com.google.android.material:material:1.1.0' //메테리얼 implement
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'  //retrofit2 implementations
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0' //gson 컨버터 implementations
+    implementation 'com.google.code.gson:gson:2.8.9' //gson 컨버터 implementations
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0' //retrofit interceptor implementations
+
 }
